# agentic-ai-patterns

./: .env.dist  .gitignore  README.md  helper.py  main.py  pyproject.toml  tools.py
.github/: copilot-instructions.md
patterns/: reflection.py
pev/: docs.md  graph.py  nodes.py
rag/: config.py  rag.py
reflection/: graph.py  nodes.py  schema.py
tracing_/: graph.py
