[project]
name = "agentic_ai_patterns"
version = "0.1.0"
description = ""
authors = [
    "Prithvi Chintakindi <CA768448@cloud.lhsystems.com>",
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "python-pptx>=1.0.2",
    "pandas>=2.3.1",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.2",
    "botbuilder-core>=4.14.0",
    "aiohttp>=3.9.0",
    "openai>=1.30.1",
    "langchain>=0.1.0",
    "langchain_community>=0.0.30",
    "langchain_core>=0.1.50",
    "langchain_text_splitters>=0.0.1",
    "langgraph[sqlite]>=0.0.63",
    "langchain_openai>=0.1.7",
    "psycopg2-binary>=2.9.9",
    "ipython>=8.25.0",
    "pygraphviz>=1.14",
    "aiosqlite>=0.21.0",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "streamlit>=1.49.1",
    "langchain-nebius>=0.1.0",
    "langchain-tavily>=0.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mlflow>=2.0.0",
    "arxiv>=2.0.0",
    "pymupdf>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.2",
    "mypy>=1.10.0"
]
